--- a/src/components/Board/Board.style.scss
+++ b/src/components/Board/Board.style.scss
@@ -1,7 +1,7 @@
 .board {
   display: grid;
-  grid-gap: 3px;
-  grid-template-columns: repeat(auto-fit, minmax(3em, 3em));
+  grid-template-columns: repeat(auto-fit, minmax(3em, 1fr));
+  margin-bottom: 3em;
 }
 
 .board-cell {
